--- a/src/locales/de/de.json
+++ b/src/locales/de/de.json
@@ -1,89 +1,89 @@
 {
-    "self_introduction": "Hi, I'm",
-    "about_me": "A front-end developer who is specialized in Vue.js, React.js, Javascript, and other technologies. You can visit my portfolio to find more cool projects like this one",
+    "self_introduction": "Hallo, ich bin",
+    "about_me": "Ein Front-End-Entwickler, spezialisiert auf Vue.js, React.js, Javascript und andere Technologien. Du kannst mein Portfolio besuchen, um mehr coole Projekte wie dieses zu finden",
     "menu": {
         "radio": "Radio",
         "podcasts": "Podcasts",
-        "saved": "Saved",
-        "recently_played": "Recently Played",
-        "about": "About"
+        "saved": "Gespeichert",
+        "recently_played": "Zuletzt gespielt",
+        "about": "Über"
     },
     "menuList": {
-        "main": {"title": "main", "description": ""},
-        "advanced_search": {"title": "advanced search", "description": "Search for certain specifications"},
-        "settings": {"title": "settings", "description": {"pt1":"Here you may customize ", "pt2": " to your needs"}},
-        "hotkeys": {"title": "hotkeys", "description": "Hotkey reference"}
+        "main": {"title": "Hauptmenü", "description": ""},
+        "advanced_search": {"title": "Erweiterte Suche", "description": "Suche nach bestimmten Spezifikationen"},
+        "settings": {"title": "Einstellungen", "description": {"pt1":"Hier kannst du ", "pt2": " nach deinen Bedürfnissen anpassen"}},
+        "hotkeys": {"title": "Hotkeys", "description": "Hotkey-Referenz"}
     },
     "inputPlaceholders": {
-        "searchBar": "Search radio stations"
+        "searchBar": "Suche nach Radiosendern"
     },
-    "empty_list_msg": "No stations have been added yet.",
-    "no_match_msg": "No matching stations",
+    "empty_list_msg": "Es wurden noch keine Sender hinzugefügt.",
+    "no_match_msg": "Keine passenden Sender",
     "advanced_search": {
-        "station_name": {"title" :"Station Name", "placeholder": "Stations by name"},
-        "tags": {"title" :"Tags", "placeholder": "Add tags and press enter..."},
-        "filters": {"title" :"Filters", "placeholder": ""},
-        "sort_by": {"title" :"Sort by", "placeholder": "Sort by"},
-        "reverse_order_label": "Show results in reverse order",
-        "search_button_title": "Search",
+        "station_name": {"title" :"Sendername", "placeholder": "Sender nach Name"},
+        "tags": {"title" :"Tags", "placeholder": "Tags hinzufügen und Enter drücken..."},
+        "filters": {"title" :"Filter", "placeholder": ""},
+        "sort_by": {"title" :"Sortieren nach", "placeholder": "Sortieren nach"},
+        "reverse_order_label": "Ergebnisse in umgekehrter Reihenfolge anzeigen",
+        "search_button_title": "Suchen",
         "filter_default_labels":{
-            "all_languages": "All languages",
-            "all_countries": "All countries",
-            "all_states": "All states"
+            "all_languages": "Alle Sprachen",
+            "all_countries": "Alle Länder",
+            "all_states": "Alle Bundesländer"
         },
         "sort_by_options":{
             "defaultLabel": "Normal",
-            "votes": "Vote count",
+            "votes": "Stimmenanzahl",
             "name": "Name",
             "tag": "Tag",
-            "country": "Country",
-            "state": "State",
-            "language": "Language",
+            "country": "Land",
+            "state": "Bundesland",
+            "language": "Sprache",
             "codec": "Codec",
             "bitrate": "Bitrate",
-            "last_check_ok": "Last check OK",
-            "last_check_time": "Last check time",
-            "click_count": "Click count",
-            "random": "Random"
+            "last_check_ok": "Letzte Überprüfung OK",
+            "last_check_time": "Letzte Überprüfungszeit",
+            "click_count": "Klickanzahl",
+            "random": "Zufällig"
         }
     },
     "alerts":{
-        "saved": "Saved",
-        "already_added": "This tag has already been added"
+        "saved": "Gespeichert",
+        "already_added": "Dieses Tag wurde bereits hinzugefügt"
     },
     "settings":{
-        "sleep_timer": {"title": "Sleep timer", "description": "Stops the current stream automatically after a certain number of minutes."},
-        "sleep_timeout": {"title": "Sleep timeout","description": "Stop stream after (min)"},
-        "https_only": {"title": "HTTPS requests only", "description":"Load https requests only (more secure, fewer results)."},
-        "load_icons": {"title": "Load icons", "description": "Load station icons (if turned off, the app will load faster)."},
-        "change_langauge": {"title": "Change language"},
-        "save_button_title": "Save"
+        "sleep_timer": {"title": "Sleep Timer", "description": "Hält den aktuellen Stream nach einer bestimmten Anzahl von Minuten automatisch an."},
+        "sleep_timeout": {"title": "Sleep Timeout","description": "Stream nach (min) stoppen"},
+        "https_only": {"title": "Nur HTTPS-Anfragen", "description":"Nur HTTPS-Anfragen laden (sicherer, weniger Ergebnisse)."},
+        "load_icons": {"title": "Icons laden", "description": "Sender-Icons laden (wenn deaktiviert, lädt die App schneller)."},
+        "change_langauge": {"title": "Sprache ändern"},
+        "save_button_title": "Speichern"
     },
     "hotkeys": {
-        "play_pause": {"title": "Play/pause", "description": "Start or pause playing the most recently selected station."},
-        "volume_up": {"title": "Volume up", "description": "Increase the volume by 10%."},
-        "volume_down": {"title": "Volume down", "description": "Decrease the volume by 10%."},
-        "prev_station": {"title": "Previous station", "description": "Switch to the previous station in the current list."},
-        "nxt_station": {"title": "Next station", "description": "Switch to the next station in the current list."},
-        "reload": {"title": "Reload",  "description": "Reload the current station."}
+        "play_pause": {"title": "Play/Pause", "description": "Startet oder pausiert den zuletzt ausgewählten Sender."},
+        "volume_up": {"title": "Lautstärke erhöhen", "description": "Erhöht die Lautstärke um 10%."},
+        "volume_down": {"title": "Lautstärke verringern", "description": "Verringert die Lautstärke um 10%."},
+        "prev_station": {"title": "Vorheriger Sender", "description": "Wechselt zum vorherigen Sender in der aktuellen Liste."},
+        "nxt_station": {"title": "Nächster Sender", "description": "Wechselt zum nächsten Sender in der aktuellen Liste."},
+        "reload": {"title": "Neu laden",  "description": "Lädt den aktuellen Sender neu."}
     },
     "station_options": {
-        "default_option": "Please select",
-        "options_for": "Options for ",
-        "remove_from_history": "Remove from play history",
-        "more_about": "More Info about ",
-        "visit_homepage": "Visit Homepage",
-        "liking": {"like": "Like", "unlike": "Unlike"},
-        "cancel": "Cancel"
+        "default_option": "Bitte auswählen",
+        "options_for": "Optionen für ",
+        "remove_from_history": "Aus der Wiedergabeverlauf entfernen",
+        "more_about": "Mehr Info über ",
+        "visit_homepage": "Zur Homepage besuchen",
+        "liking": {"like": "Gefällt mir", "unlike": "Gefällt mir nicht"},
+        "cancel": "Abbrechen"
     },
     "share_list":{
-        "title": {"pt1":"Share" ,"pt2": "list with someone"}
+        "title": {"pt1":"Teile" ,"pt2": "Liste mit jemandem"}
     },
     "suggs": {
-        "recommended_title": "Recommended for You",
-        "pop_tags_title": "Popular Tags"
+        "recommended_title": "Empfohlen für dich",
+        "pop_tags_title": "Beliebte Tags"
     },
     "titles":{
-        "see_all": "See all"
+        "see_all": "Alle ansehen"
     }
 }
